# agentCrab

./: .gitignore  .gitmodules  AGENT_README.md  LICENSE  README.md  agentcrab-mcp.service  nginx-agentcrab.conf  smithery.yaml
Polymarket/: README.md
Polymarket/api/: auth.py  config.py  main.py  models.py  requirements.txt
Polymarket/api/routes/: admin.py  agent.py  category_leaderboard.py  deposit.py  football.py  markets.py  orderbook.py  payment.py  positions.py  token.py  traders.py  trading.py  triggers.py
Polymarket/api/services/: balance.py  bridge.py  categories.py  category_leaderboard.py  clob.py  data_api.py  gamma.py  health.py  history.py  http_pool.py  leaderboard.py  payment.py  points.py  polymarket.py  relayer.py  triggers.py
Polymarket/contracts/: .gitignore  foundry.toml
Polymarket/contracts/script/: Deploy.s.sol  UpgradeV2.s.sol
Polymarket/contracts/src/: AgentCrabPayment.sol  AgentCrabPaymentV2.sol  AgentWayPayment.sol
Polymarket/contracts/test/: AgentCrabPayment.t.sol  AgentCrabPaymentV2.t.sol  AgentWayPayment.t.sol
Polymarket/contracts/test/mocks/: MockERC20.sol
agentcrab-python/: LICENSE  README.md  pyproject.toml
agentcrab-python/agentcrab/: __init__.py  __main__.py  _auth.py  _exceptions.py  _http.py  _signer.py  _types.py  client.py  mcp_server.py
clawhub/agentcrab-polymarket/: SKILL.md
clawhub/agentcrab-polymarket/references/: http-api.md
docs/: auth-and-signing.md  enable-trading.md  place-orders.md  sdk-guide.md  token-economics.md  wallet-and-payment.md
spec/: LICENSE  README.md  protocol.md
