[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcrab"
version = "0.1.0"
description = "Python SDK for agentCrab — turn any AI agent into a Polymarket assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "agentCrab", email = "dev@agentcrab.ai" },
]
keywords = ["polymarket", "prediction-market", "ai-agent", "web3", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "eth-account>=0.13.0",
    "httpx>=0.27.0",
    "hexbytes>=1.0.0",
]

[project.urls]
Homepage = "https://agentcrab.ai"
Documentation = "https://github.com/agentcrab/agentcrab-python"
Repository = "https://github.com/agentcrab/agentcrab-python"

[tool.hatch.build.targets.wheel]
packages = ["agentcrab"]
