[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcrab"
version = "0.4.1"
description = "Python SDK + MCP Server for agentCrab — trade Polymarket prediction markets, earn $CRAB token airdrops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "agentCrab", email = "dev@agentcrab.ai" },
]
keywords = ["polymarket", "prediction-market", "ai-agent", "trading", "mcp", "mcp-server", "airdrop", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "eth-account>=0.13.0",
    "httpx>=0.27.0",
    "hexbytes>=1.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
agentcrab-mcp = "agentcrab.mcp_server:main"

[project.urls]
Homepage = "https://agentcrab.ai"
Documentation = "https://github.com/agentcrab/agentcrab-python"
Repository = "https://github.com/agentcrab/agentcrab-python"

[tool.hatch.build.targets.wheel]
packages = ["agentcrab"]
